# nbstr

./: Cargo.toml  README.md  tests.rs
src/: default.rs  lib.rs  nbstr_64as48bit_hack.rs  nbstr_default.rs  nbstr_no_giants.rs  nbstr_shared.rs  no_giants.rs  shared.rs  utf8_char.rs  x64as48bit_hack.rs
